Add Question screen added to Presenter flow - in progress.

--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -313,7 +313,7 @@
             </objects>
             <point key="canvasLocation" x="2862" y="-289"/>
         </scene>
-        <!--Event Details-->
+        <!--Events-->
         <scene sceneID="nIj-1S-itV">
             <objects>
                 <tableViewController id="495-lb-Qk8" customClass="PresenterEventDetailVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
@@ -371,7 +371,7 @@
                             <outlet property="delegate" destination="495-lb-Qk8" id="IBF-E6-0iV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Event Details" id="X1A-Bc-e8h" userLabel="Event Details">
+                    <navigationItem key="navigationItem" title="Events" id="X1A-Bc-e8h" userLabel="Event Details">
                         <barButtonItem key="rightBarButtonItem" title="+" id="i7a-a7-0bo">
                             <connections>
                                 <action selector="addQuestionBarBtnTapped:" destination="495-lb-Qk8" id="G6O-GH-NSI"/>
@@ -379,10 +379,69 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <segue destination="lzb-Fz-lQQ" kind="show" identifier="segueAddQuestionVC" id="X38-nS-NIl"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nol-Td-0Ac" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3644" y="-289.20539730134936"/>
+            <point key="canvasLocation" x="3666" y="-289"/>
+        </scene>
+        <!--Add Question-->
+        <scene sceneID="KU2-cB-HOa">
+            <objects>
+                <tableViewController id="lzb-Fz-lQQ" customClass="AddQuestionVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="qeg-jE-Iz0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldCell" id="vbJ-Jg-7O4" customClass="TextFieldCell" customModule="DDVP" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vbJ-Jg-7O4" id="d9B-Nb-B4t">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9P-G5-l7n" userLabel="Remove">
+                                            <rect key="frame" x="18" y="6" width="66" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="Remove"/>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9k-3u-EUt" userLabel="Desc Lable">
+                                            <rect key="frame" x="72" y="10" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pnV-N2-WMK">
+                                            <rect key="frame" x="122" y="5" width="245" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descLabel" destination="Y9k-3u-EUt" id="YAs-mC-nA2"/>
+                                    <outlet property="removeBtn" destination="v9P-G5-l7n" id="Rw0-yJ-au4"/>
+                                    <outlet property="textField" destination="pnV-N2-WMK" id="bge-CV-xvX"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lzb-Fz-lQQ" id="6AJ-UF-YVK"/>
+                            <outlet property="delegate" destination="lzb-Fz-lQQ" id="dvN-go-uw6"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Add Question" id="mh1-Ha-dPl"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lhl-wY-6Na" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4461.6000000000004" y="-292.80359820089956"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="X6A-0t-81N">
