--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -343,15 +344,15 @@
                                             <color key="textColor" red="0.22074325205595616" green="0.60866661269430056" blue="0.018847422573101669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EF-Zs-aIE">
-                                            <rect key="frame" x="77" y="78" width="279" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EF-Zs-aIE" userLabel="durration">
+                                            <rect key="frame" x="115" y="78" width="220" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.22074325210000001" green="0.6086666127" blue="0.018847422570000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Count : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uls-2M-17Z">
-                                            <rect key="frame" x="19" y="78" width="60" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Expires In : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uls-2M-17Z">
+                                            <rect key="frame" x="19" y="78" width="90" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="1" green="0.1303893758959831" blue="0.025332441348791868" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -360,8 +361,8 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="queDurationLbl" destination="5EF-Zs-aIE" id="YWF-Eg-qAT"/>
                                     <outlet property="queQueLbl" destination="jOA-2K-0D3" id="4ka-ms-2Ct"/>
-                                    <outlet property="queSubscribersCountLbl" destination="5EF-Zs-aIE" id="jax-PK-Wlf"/>
                                     <outlet property="queTitleLbl" destination="0k8-5I-8jA" id="laG-sI-QfM"/>
                                 </connections>
                             </tableViewCell>
@@ -391,39 +392,54 @@
         <scene sceneID="KU2-cB-HOa">
             <objects>
                 <tableViewController id="lzb-Fz-lQQ" customClass="AddQuestionVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="qeg-jE-Iz0">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" id="qeg-jE-Iz0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldCell" id="vbJ-Jg-7O4" customClass="TextFieldCell" customModule="DDVP" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vbJ-Jg-7O4" id="d9B-Nb-B4t">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9P-G5-l7n" userLabel="Remove">
-                                            <rect key="frame" x="18" y="6" width="66" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Remove"/>
-                                        </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9k-3u-EUt" userLabel="Desc Lable">
-                                            <rect key="frame" x="72" y="10" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9k-3u-EUt" userLabel="Desc Lable">
+                                            <rect key="frame" x="18" y="10" width="85" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" priority="750" constant="85" id="gm7-vU-Ane"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pnV-N2-WMK">
-                                            <rect key="frame" x="122" y="5" width="245" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pnV-N2-WMK">
+                                            <rect key="frame" x="92" y="5" width="260" height="30"/>
                                             <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9P-G5-l7n" userLabel="Remove">
+                                            <rect key="frame" x="18" y="34" width="66" height="30"/>
+                                            <state key="normal" title="Remove"/>
+                                            <connections>
+                                                <action selector="removeBtnTapped:" destination="lzb-Fz-lQQ" eventType="touchUpInside" id="uFX-AZ-fDQ"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Y9k-3u-EUt" firstAttribute="leading" secondItem="v9P-G5-l7n" secondAttribute="leading" id="FhP-jV-K6m"/>
+                                        <constraint firstItem="pnV-N2-WMK" firstAttribute="leading" secondItem="v9P-G5-l7n" secondAttribute="trailing" constant="8" symbolic="YES" id="JAY-J1-vhR"/>
+                                        <constraint firstItem="pnV-N2-WMK" firstAttribute="top" secondItem="d9B-Nb-B4t" secondAttribute="topMargin" constant="-3" id="MS6-nL-u4Z"/>
+                                        <constraint firstAttribute="bottom" secondItem="v9P-G5-l7n" secondAttribute="bottom" id="OFP-lK-lJf"/>
+                                        <constraint firstItem="v9P-G5-l7n" firstAttribute="leading" secondItem="d9B-Nb-B4t" secondAttribute="leadingMargin" constant="10" id="aDN-gU-whl"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="pnV-N2-WMK" secondAttribute="trailing" constant="15" id="aOt-Xy-jcT"/>
+                                        <constraint firstItem="pnV-N2-WMK" firstAttribute="leading" secondItem="d9B-Nb-B4t" secondAttribute="leadingMargin" constant="84" id="lD6-d1-Z4i"/>
+                                        <constraint firstItem="pnV-N2-WMK" firstAttribute="centerY" secondItem="Y9k-3u-EUt" secondAttribute="centerY" id="xQz-64-n7f"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="1" green="0.61496007500000005" blue="0.71956759059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="descLabel" destination="Y9k-3u-EUt" id="YAs-mC-nA2"/>
                                     <outlet property="removeBtn" destination="v9P-G5-l7n" id="Rw0-yJ-au4"/>
@@ -436,7 +452,13 @@
                             <outlet property="delegate" destination="lzb-Fz-lQQ" id="dvN-go-uw6"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Add Question" id="mh1-Ha-dPl"/>
+                    <navigationItem key="navigationItem" title="Add Question" id="mh1-Ha-dPl">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="s7H-m8-OVZ">
+                            <connections>
+                                <action selector="saveQuestionTapped:" destination="lzb-Fz-lQQ" id="1WR-4q-gwQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lhl-wY-6Na" userLabel="First Responder" sceneMemberID="firstResponder"/>
